Imported code from plunker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<img [ccRollover]="{
+  'initial':'https://unsplash.it/200/300?image=201',
+  'over':'https://unsplash.it/200/300?image=202'
+}"/>
